refactor: refactor the entire application to use dependency injection and typeorm
